--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,13 +1,13 @@
-<h1>Create an article</h1>
+<h1>Edit an existing article</h1>
 
 <% if @article.errors.any? %>
-<h2>The following errors prevented the article from getting created</h2>
+    <h2>The following errors prevented the article from getting created</h2>
     <ul>
         <% @article.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
         <% end %>
     </ul>
-    <% end %>
+<% end %>
 
 <%= form_for @article do |f| %>
 
@@ -26,3 +26,5 @@
 <% end %>
 
 <%= link_to "Back to articles listing", articles_path %>
+
+
